--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,6 +1,8 @@
 FROM python:3.7.3
 
-WORKDIR /app
+WORKDIR /app 
+
+RUN pip install unittest-xml-reporting
 
 COPY test_main.py .
 COPY movies.json .
